2004-10-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpmoveoptions.[ch]
	* app/tools/gimpmovetool.[ch]: applied (cleaned up version of) a
	patch from Joao S. O. Bueno that adds a tool-option to restore the
	old Move tool behaviour. Fixes bug #156801.

2004-10-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/despeckle.c: applied a patch from Geert Jordaens
	that improves the Despeckle algorithm. See bug #72862.

2004-10-29  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/siod-wrapper.c (init_constants): Updated to
	use convert_string() to change name of constant to Scheme format.

2004-10-30  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* NEWS
	* README: updated for 2.2 pre-releases.

2004-10-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/grid.c (run): applied patch by Joao S. O. Bueno
	that implements the opacity parameters the way it is documented.
	Fixes bug #156750.

2004-10-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/glasstile.c: applied patch from Yeti, updated by
	Kevin Cozens and modified by me. Fixes bug #85261.

2004-10-29  Øyvind Kolås  <pippin@gimp.org>

	* tools/pdbgen/pdb/color.pdb: moved body of code from here.

	* app/core/gimpdrawable-levels.[ch]: to here.
	* app/core/Makefile.am: added gimpdrawable-levels.[ch].
	* app/pdb/color_cmds.c: regenerated.

	* app/actions/drawable-actions.c
	* app/actions/drawable-commands.[ch]: added drawable-layers-auto
	action.

	* app/widgets/gimphelp-ids.h: added GIMP_HELP_LAYER_WHITE_BALANCE.
	* app/menus/image-menu.xml.in: added new auto/White Balance action.
	* app/menus/image-menu.xml: regenerated.

2004-10-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpuimanager.c (gimp_ui_manager_entry_load)
	* app/widgets/gimpclipboard.c (gimp_clipboard_init): only be
	verbose on request.

	* app/plug-in/plug-in.c (plug_in_close): turned warnings into
	messages and respect gimp->be_verbose.

2004-10-29  Øyvind Kolås  <pippin@gimp.org>

	* app/actions/drawable-commands.[ch]