@@ -1590,6 +1590,14 @@ prefs_dialog_new (Gimp       *gimp,
                                     _("_Gradient"), GIMP_STOCK_GRADIENT,
                                     GTK_BOX (vbox2));
 
+  vbox2 = prefs_frame_new (_("Move Tool"),
+                           GTK_CONTAINER (vbox), FALSE);
+
+  prefs_check_button_add_with_icon (object, "move-tool-changes-active",
+                                    _("Change current layer or path"),
+                                    GIMP_STOCK_TOOL_MOVE,
+                                    GTK_BOX (vbox2));
+
   g_object_unref (size_group);
   size_group = NULL;
 
