@@ -41,8 +41,7 @@ enum
 {
   PROP_0,
   PROP_MOVE_TYPE,
-  PROP_MOVE_CURRENT,
-  PROP_CHANGE_ACTIVE
+  PROP_MOVE_CURRENT
 };
 
 
@@ -108,11 +107,6 @@ gimp_move_options_class_init (GimpMoveOptionsClass *klass)
                                     "move-current", NULL,
                                     FALSE,
                                     0);
-  GIMP_CONFIG_INSTALL_PROP_BOOLEAN (object_class, PROP_CHANGE_ACTIVE,
-                                    "change-active", NULL,
-                                    FALSE,
-                                    0);
-
 }
 
 static void
@@ -130,9 +124,6 @@ gimp_move_options_set_property (GObject      *object,
       break;
     case PROP_MOVE_CURRENT:
       options->move_current = g_value_get_boolean (value);
-      break;
-    case PROP_CHANGE_ACTIVE:
-      options->change_active = g_value_get_boolean (value);
       break;
     default:
       G_OBJECT_WARN_INVALID_PROPERTY_ID (object, property_id, pspec);
@@ -156,9 +147,6 @@ gimp_move_options_get_property (GObject    *object,
     case PROP_MOVE_CURRENT:
       g_value_set_boolean (value, options->move_current);
       break;
-    case PROP_CHANGE_ACTIVE:
-      g_value_set_boolean (value, options->change_active);
-      break;
     default:
       G_OBJECT_WARN_INVALID_PROPERTY_ID (object, property_id, pspec);
       break;
@@ -172,33 +160,26 @@ gimp_move_options_notify_type (GimpMoveOptions *move_options,
 {
   const gchar *false_label = NULL;
   const gchar *true_label  = NULL;
-  const gchar *change_active_label = NULL;
   GtkWidget   *button;
-  GtkWidget   *check;
   GSList      *group;
 
   button = g_object_get_data (G_OBJECT (frame), "radio-button");
-  check  = g_object_get_data (G_OBJECT (frame), "check");
 
   switch (move_options->move_type)
     {
     case GIMP_TRANSFORM_TYPE_LAYER:
-      false_label         = _("Pick a layer or guide to Move");
-      true_label          = _("Move the active layer");
-      change_active_label = _("Change the active layer");
+      false_label = _("Pick a layer or guide");
+      true_label  = _("Move the current layer");
       break;
 
     case GIMP_TRANSFORM_TYPE_SELECTION:
-      false_label         = _("Move selection");
-      true_label          = _("Move selection");
-      change_active_label = NULL;
+      false_label = true_label = _("Move selection");
       break;
 
     case GIMP_TRANSFORM_TYPE_PATH:
-      false_label         = _("Pick a path to move");
-      true_label          = _("Move the active path");
-      change_active_label = _("Change the active path");
-      break;
+      false_label = _("Pick a path");
+      true_label  = _("Move the current path");
+     break;
     }
 
   group = gtk_radio_button_get_group (GTK_RADIO_BUTTON (button));
@@ -207,21 +188,8 @@ gimp_move_options_notify_type (GimpMoveOptions *move_options,
   group = g_slist_next (group);
   gtk_button_set_label (GTK_BUTTON (group->data), false_label);
 
-  gtk_button_set_label (GTK_BUTTON (check), change_active_label);
-
   gtk_widget_set_sensitive (frame,
                             move_options->move_type != GIMP_TRANSFORM_TYPE_SELECTION);
-  gtk_widget_set_sensitive (check,
-                            move_options->move_type != GIMP_TRANSFORM_TYPE_SELECTION);
-
-  if (move_options->move_type == GIMP_TRANSFORM_TYPE_SELECTION)
-    {
-      gtk_widget_hide (check);
-    }
-  else
-    {
-      gtk_widget_show (check);
-    }
 }
 
 GtkWidget *
@@ -232,7 +200,6 @@ gimp_move_options_gui (GimpToolOptions *tool_options)
   GtkWidget *hbox;
   GtkWidget *label;
   GtkWidget *frame;
-  GtkWidget *check;
   gchar     *title;
 
   vbox = gimp_tool_options_gui (tool_options);
@@ -253,11 +220,6 @@ gimp_move_options_gui (GimpToolOptions *tool_options)
   frame = gimp_prop_boolean_radio_frame_new (config, "move-current",
                                              title, "true", "false");
 
-  /* change active layer */
-  check = gimp_prop_check_button_new (config, "change_active", "false");
-
-  g_object_set_data (G_OBJECT (frame), "check", check);
-
   gimp_move_options_notify_type (GIMP_MOVE_OPTIONS (config), NULL, frame);
 
   g_signal_connect_object (config, "notify::move-type",
@@ -266,10 +228,6 @@ gimp_move_options_gui (GimpToolOptions *tool_options)
 
   gtk_box_pack_start (GTK_BOX (vbox), frame, FALSE, FALSE, 0);
   gtk_widget_show (frame);
-
-  gtk_box_pack_start (GTK_BOX (vbox), check, FALSE, FALSE, 0);
-  if (GIMP_MOVE_OPTIONS (config)->move_type == GIMP_TRANSFORM_TYPE_SELECTION)
-    gtk_widget_show (check);
 
   g_free (title);
 
